      uses progress bar, modeled after the ProgressBar class from the
      progressbar2 library (see #106).
  - obsplus.stations
    * Fixed issue where networks and stations could be left un-pruned when
      querying on channel (see #115).
    * Handled an edge case in df_to_inv where an integer NSLC code gets
      misinterpreted by pandas (see #130 and #132).
  - obsplus.utils
    * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
    * Refactored all geodetics functions into one utility class (#147).
    * Moved all utility functions into one utility modules (#147).
    * Removed catalog_to_directory in favor of simply using put_events of
      EventBank (#147).
    * Moved all utils into a new utils module (see #147).
  - obsplus.validate
    * Added the obsplus.validate module which contains a simple framework for
      defining and running validators on python objects. Replaced the old
      event validation (see #122).
    * Added the validators created in (#64) to PR (#122).
  - obsplus.events
    * Dataframe_to_inventory can now fetch NRL responses (#125).
    * Changed event_to_dataframe (events_to_df) to report the used_phase_count
      attached to the preferred origin and fall back on counting the arrivals
      otherwise.
    * Added notes to the docstring of event_to_dataframe listing the
      assumptions that are made when extracting information from an Event.
  - obsplus.waveforms
    * Added assert_streams_almost_equal method (see #128).
    * The function obsplus.waveforms.stream_split_bulk now has more flexible
      inputs (see #128).
   - obsplus.datasets
    * Removed large kemmerer dataset as it could cause CI to fail (see #147).
    * Added suffix "_test" to all other datasets to indicate they are just for
      testing and not for research (see #147).
    * Switched from MD5 hashing to SHA256 as the latter is more secure and the
      computational differences were negligible (see #147).
  - general