@@ -37,6 +37,9 @@ obsplus master:
       querying on channel (see #115).
     * Handled an edge case in df_to_inv where an integer NSLC code gets
       misinterpreted by pandas (see #130 and #132).
+  - obsplus.structures.fetcher
+    * Fixed issue with `time_before` and `time_after` params in `Fetcher`
+      (see #168).
   - obsplus.utils
     * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
     * Refactored all geodetics functions into one utility class (#147).
